<resources>
    <string name="app_name">ALF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ALF</string>
    <string name="nav_header_subtitle">info@alfoot.net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_photo">Take photo</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_open_youtube">Youtube</string>
    <string name="action_open_referees">Referees</string>
    <string name="action_open_events">Events</string>
    <string name="action_open_substitutions">Substitutions</string>
    <string name="action_skip">Skip</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_done">Done</string>
    <string name="show_only_finished">Show only finished</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_persons">Persons</string>
    <string name="menu_matches">Matches</string>
    <string name="search_title">Search title</string>
    <string name="search_hint">Search</string>
    <string name="title_person">Person</string>
    <string name="title_match">Match</string>
    <string name="title_formations">Formations</string>
    <string name="title_status_selection">Select status</string>
    <string name="title_event_type_selection">Select event type</string>
    <string name="title_team_selection">Select team</string>
    <string name="title_event">Event</string>
    <string name="title_referee_selection">Select referee</string>
    <string name="title_team">Team</string>
    <string name="title_select_formation">Select formation</string>
    <string name="title_field_position_selection">Select position</string>
    <string name="title_player_selection">Select player</string>
    <string name="title_minute_selection">Select minute</string>
    <string name="title_youtube_video">YouTube video</string>
    <string name="title_match_referees">Referees</string>
    <string name="title_events">Events</string>
    <string name="title_substitutions">Substitutions</string>

    <string name="loading_failed">Loading failed</string>
    <string name="retry">Retry</string>

    <string name="content_description_team_logo">Team logo</string>
    <string name="content_description_person_photo">Person photo</string>
    <string name="content_description_player_photo">Player photo</string>
    <string name="content_description_flag_image">Flag image</string>
    <string name="content_description_event_type">Event type</string>
    <string name="content_description_substitution">Substitution</string>
    <string name="content_description_in_start">In start icon</string>
    <string name="content_description_add_person">Add person</string>
    <string name="content_description_add_player">Add player</string>
    <string name="content_description_add_referee">Add referee</string>
    <string name="content_description_add_event">Add event</string>
    <string name="content_description_add_substitution">Add substitution</string>
    <string name="content_description_change_status">Change status</string>

    <string name="change_status">Change status</string>

    <string name="change_formation">Change formation</string>

    <string name="tab_name_host_squad">Host squad</string>
    <string name="tab_name_guest_squad">Guest squad</string>
    <string name="tab_name_events">Events</string>

    <string name="minute">Minute</string>
    <string name="team">Team</string>
    <string name="person">Person</string>
    <string name="additional_info">Additional info</string>
    <string name="match_score_unknown">- : -</string>

    <string name="in_for">In for: %s</string>
    <string name="out_for">Out for: %s</string>
    <string name="event_person">%s %s</string>
    <string name="player_in">%s %s</string>
    <string name="player_out">%s %s</string>

    <string name="hint_minute">25</string>
    <string name="hint_video_url">Video URL</string>
    <string name="hint_person">Ivanov Ivan Ivanovich</string>
    <string name="hint_additional_info">Some useful information</string>
    <string name="postfix_minute">\"</string>
    <string name="youtube_url_prefix">youtube.com/watch?v=</string>

    <string name="empty_collection_referees">No referees</string>
    <string name="empty_collection_events">No events</string>
    <string name="empty_collection_field_positions">No field positions</string>
    <string name="empty_collection_appearances">No players</string>
    <string name="empty_collection_teams">No teams</string>
    <string name="empty_collection_substitutions">No substitutions</string>

    <string name="competition">Competition</string>
    <string name="format">Format</string>
    <string name="stadium">Stadium</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="no_competition">No competition</string>

</resources>