<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.alf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_persons"
        android:name="com.example.alf.ui.persons.PersonsFragment"
        android:label="@string/menu_persons"
        tools:layout="@layout/fragment_persons" >
        <action
            android:id="@+id/action_nav_persons_to_personFragment"
            app:destination="@id/personFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.example.alf.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_matches" >
        <action
            android:id="@+id/action_nav_matches_to_matchFragment"
            app:destination="@id/matchFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.alf.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/personFragment"
        android:name="com.example.alf.ui.person.PersonFragment"
        android:label="fragment_person"
        tools:layout="@layout/fragment_person" >
        <argument
            android:name="personId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/matchFragment"
        android:name="com.example.alf.ui.match.MatchFragment"
        android:label="fragment_match"
        tools:layout="@layout/fragment_match" >
        <argument
            android:name="matchId"
            app:argType="integer" />
    </fragment>

</navigation>