<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable name="teamSelectionViewModel" type="com.example.alf.ui.match.team.selection.TeamSelectionViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.match.team.selection.TeamSelectionFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teams_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{teamSelectionViewModel.loadingInProgressLiveData ? View.VISIBLE : View.GONE}"
            style="?android:attr/progressBarStyle" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_double"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_large"
            android:text="@string/empty_collection_teams"
            android:visibility="@{teamSelectionViewModel.emptyCollectionLiveData ? View.VISIBLE : View.GONE}"/>

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{teamSelectionViewModel.teamsErrorLiveData ? View.VISIBLE : View.GONE}">

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin_double"
                android:textSize="@dimen/text_size_large"
                android:text="@string/loading_failed" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin_double"
                android:text="@string/retry" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
