<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="eventViewModel" type="com.example.alf.ui.match.event.EventViewModel" />
        <variable name="matchViewModel" type="com.example.alf.ui.match.MatchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.match.event.EventFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/card_margin_half"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/card_margin_half"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/minute_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/card_margin_half"
                    android:layout_marginHorizontal="@dimen/card_margin"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/minute_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_margin_half"
                        android:textSize="@dimen/edit_event_header_text_size"
                        android:text="@string/minute"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_margin_half"
                        app:cardBackgroundColor="@color/white">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <EditText
                                android:id="@+id/minute"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:textSize="@dimen/edit_event_text_size"
                                android:hint="@string/hint_minute"
                                android:maxLength="3"
                                android:inputType="number"
                                android:text="@{String.valueOf(eventViewModel.eventLiveData.minute)}"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/edit_event_text_size"
                                android:text="@string/postfix_minute"/>

                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/team_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/card_margin_half"
                    android:layout_marginHorizontal="@dimen/card_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/team_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_margin_half"
                        android:textSize="@dimen/edit_event_header_text_size"
                        android:text="@string/team"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_margin_half"  >

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/card_margin"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <RadioButton
                                android:id="@+id/radio_host"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:drawableTint="@null"
                                android:backgroundTint="@null"
                                android:foregroundTint="@null"
                                android:buttonTint="@null"
                                android:drawablePadding="16dp"
                                style="@null"
                                android:textSize="@dimen/text_size_medium"
                                android:text="@{matchViewModel.hostTeamNameLiveData}"
                                app:buttonImageUrl="@{matchViewModel.hostTeamLogoUrlLiveData}"/>
                            <RadioButton
                                android:id="@+id/radio_guest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:drawableTint="@null"
                                android:backgroundTint="@null"
                                android:foregroundTint="@null"
                                android:buttonTint="@null"
                                android:drawablePadding="16dp"
                                style="@null"
                                android:textSize="@dimen/text_size_medium"
                                android:text="@{matchViewModel.guestTeamNameLiveData}"
                                app:buttonImageUrl="@{matchViewModel.guestTeamLogoUrlLiveData}"/>
                        </RadioGroup>

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/person_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/card_margin_half"
                    android:layout_marginHorizontal="@dimen/card_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/person_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_margin_half"
                        android:textSize="@dimen/edit_event_header_text_size"
                        android:text="@string/person"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_margin_half"  >

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/white"
                            app:cardUseCompatPadding="true"
                            app:cardElevation="0dp" >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/photo"
                                    android:layout_width="75dp"
                                    android:layout_height="105dp"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:adjustViewBounds="true"
                                    android:contentDescription="@string/content_description_player_photo"
                                    android:scaleType="centerCrop"
                                    app:imageSrc="@{eventViewModel.eventLiveData.person}"/>


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_toEndOf="@id/photo"
                                    android:layout_alignParentEnd="true"
                                    android:layout_margin="@dimen/card_margin"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/last_name"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="@dimen/text_size_medium"
                                        android:text="@{eventViewModel.eventLiveData.person.lastName}"/>

                                    <TextView
                                        android:id="@+id/first_name"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="@dimen/text_size_small"
                                        android:text="@{eventViewModel.eventLiveData.person.firstName}"/>

                                </LinearLayout>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <!--<EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:inputType="text"
                            android:maxLines="1"
                            android:hint="@string/hint_person"
                            android:focusable="false"
                            android:text="@={eventViewModel.eventLiveData.person.lastName}" />-->

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/additional_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/card_margin_half"
                    android:layout_marginHorizontal="@dimen/card_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/additional_info_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_margin_half"
                        android:textSize="@dimen/edit_event_header_text_size"
                        android:text="@string/additional_info"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_margin_half"  >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:inputType="text"
                            android:maxLines="1"
                            android:hint="@string/hint_additional_info"
                            android:focusable="false"
                            android:text="@={eventViewModel.eventLiveData.description}" />

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{eventViewModel.loadingInProgressLiveData ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>